doc (movie.handler): swaggo doc for upcoming movies route
